	libfreeipmi/include/freeipmi/spec/oem/ipmi-cmd-oem-intel-spec.h:
	Splice out motherboard specific extensions into new files and rename a number of
	macros & variables accordingly.

	* libfreeipmi/include/freeipmi/spec/oem/ipmi-comp-code-oem-intel-s5500wb-spec.h,
	libfreeipmi/include/freeipmi/spec/oem/ipmi-event-reading-type-code-oem-intel-s5500wb-spec.h,
	libfreeipmi/include/freeipmi/spec/oem/ipmi-sensor-and-event-code-tables-oem-intel-s5500wb-spec.h,
	libfreeipmi/include/freeipmi/spec/oem/ipmi-sensor-number-oem-intel-s5500wb-spec.h,
	libfreeipmi/include/freeipmi/spec/oem/ipmi-slave-address-oem-intel-s5500wb-spec.h,
	libfreeipmi/spec/ipmi-sensor-and-event-code-tables-oem-intel-s5500wb-spec.c,
	libfreeipmi/include/freeipmi/spec/oem/ipmi-cmd-oem-intel-common-spec.h,
	libfreeipmi/include/freeipmi/spec/oem/ipmi-cmd-oem-intel-s5500wb-spec.h,
	libfreeipmi/include/freeipmi/spec/oem/ipmi-cmd-oem-intel-s2600jf-spec.h,
	libfreeipmi/include/freeipmi/spec/oem/ipmi-cmd-oem-intel-s2600wt-spec.h,
	libfreeipmi/include/freeipmi/spec/oem/ipmi-netfn-oem-intel-common-spec.h,
	libfreeipmi/include/freeipmi/spec/oem/ipmi-netfn-oem-intel-s5500wb-spec.h,
	libfreeipmi/include/freeipmi/spec/oem/ipmi-netfn-oem-intel-s2600jf-spec.h,
	libfreeipmi/include/freeipmi/spec/oem/ipmi-netfn-oem-intel-s2600wt-spec.h,
	libfreeipmi/include/freeipmi/spec/oem/ipmi-sensor-types-oem-intel-common-spec.h,
	libfreeipmi/include/freeipmi/spec/oem/ipmi-sensor-types-oem-intel-s5500wb-spec.h,
	libfreeipmi/include/freeipmi/spec/oem/ipmi-sensor-types-oem-intel-sr1625-spec.h,
	libfreeipmi/include/freeipmi/spec/oem/ipmi-sensor-types-oem-intel-quanta-qssc-s4r-spec.h:
	New file(s).

	* libfreeipmi/sel, libfreeipmi/util, ipmi-oem: Update for macro /
	variable change changes accordingly.

2020-01-08 Albert Chu <chu11@llnl.gov>

	* bmc-device/bmc-device.c (write_fru): Fix invalid type in
	pstdout_printf().

	* libfreeipmi/sel/ipmi-sel-string-intel-e52600v3-common.c
	(sel_string_output_intel_e52600v3_event_data3_discrete_oem,