@@ -181,7 +181,11 @@ nobase_include_HEADERS = \
 	freeipmi/spec/oem/ipmi-sensor-and-event-code-tables-oem-hp-spec.h \
 	freeipmi/spec/oem/ipmi-sensor-and-event-code-tables-oem-intel-node-manager-spec.h \
 	freeipmi/spec/oem/ipmi-sensor-and-event-code-tables-oem-intel-spec.h \
+	freeipmi/spec/oem/ipmi-sensor-and-event-code-tables-oem-intel-common-spec.h \
 	freeipmi/spec/oem/ipmi-sensor-and-event-code-tables-oem-intel-s5500wb-spec.h \
+	freeipmi/spec/oem/ipmi-sensor-and-event-code-tables-oem-intel-s2600jf-spec.h \
+	freeipmi/spec/oem/ipmi-sensor-and-event-code-tables-oem-intel-quanta-qssc-s4r-spec.h \
+	freeipmi/spec/oem/ipmi-sensor-and-event-code-tables-oem-intel-s2600wp-spec.h \
 	freeipmi/spec/oem/ipmi-sensor-and-event-code-tables-oem-inventec-spec.h \
 	freeipmi/spec/oem/ipmi-sensor-and-event-code-tables-oem-quanta-spec.h \
 	freeipmi/spec/oem/ipmi-sensor-and-event-code-tables-oem-supermicro-spec.h \
